tests/error/array_oob.gw
#! [contains] ArrayOutofBounds
var Object[1] i;
i[1];
